--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     
 </head>
 <body>
-    <img id = "Background" src="./assets/cover/Fine Line album.jpg" alt="" srcset="">
+    <img id = "Background" src="./Assets/cover/Fine Line album.jpg" alt="" srcset="">
     <audio id = "Song" src="./Assets/music/Watermelon Sugar - Harry Styles.mp3"></audio>
     <div class = "container">
         <div class = "box"></div>
-        <img id = "Thumbnail" src="./assets/cover/Fine Line album.jpg" alt="" srcset="">
-        <img id = "Previous" src = "./assets/icon/back.png" alt="" srcset="">
-        <img id = "Next" src="./assets/icon/next.png" alt="" srcset="">
-        <img id = "Play-Pause" onclick="PlayPauseFunc()" src="./assets/icon/play-button.png" alt="" srcset="">
+        <img id = "Thumbnail" src="./Assets/cover/Fine Line album.jpg" alt="" srcset="">
+        <img id = "Previous" src = "./Assets/icon/back.png" alt="" srcset="">
+        <img id = "Next" src="./Assets/icon/next.png" alt="" srcset="">
+        <img id = "Play-Pause" onclick="PlayPauseFunc()" src="./Assets/icon/play-button.png" alt="" srcset="">
 
         <input type = "range" min = "0" max = "" value = "0" id = "range-slider">
             <div class = "currenttime"></div>
